# Gravity

./: .gitignore  README.md  gravity.modules.yaml  package.json
apps/: README.md
apps/voice-console/: package.json
apps/voice-realtime-agents/: package-lock.json  package.json
apps/web/: README.md  package.json
docs/: GRAVITY_CONTRACTS.md  GRAVITY_CORE.md  GRAVITY_ENDPOINTS.md  GRAVITY_MODULES.md  GRAVITY_ROADMAP.md  GRAVITY_SAFETY_POLICY.md  GRAVITY_SYSTEM.md
docs/architecture/: CLI_STACK.md  SYSTEM_SURFACES.md  VOICE_STACK.md
docs/blueprints/: 01-core.md  02-ollama.md  03-memory.md  04-coding.md  05-defense.md  06-gateway.md  07-ui.md  08-channels.md  09-voice.md  10-business-operator.md  README.md
modules/gateway/: Cargo.toml
modules/gateway/.github/workflows/: release.yml
modules/gateway/examples/: README.md
modules/gateway/examples/json-server/: config-lb.yaml  db-lb-1.json  db-lb-3.json  db-web.json
modules/gateway/src/api/: mod.rs
modules/gateway/src/config/: api.rs  cli.rs  mod.rs
modules/gateway/src/services/: mod.rs
modules/grav-chat-astrbot/: main.py
modules/grav-coding-aider/: IMRAN_AUTOMATION_PLAYBOOK.md
modules/grav-coding-openhands/: IMRAN_AUTOMATION_PLAYBOOK.md
modules/grav-gateway/: .justfile  LICENSE
modules/grav-gateway-locci/: .dockerignore  .http  Dockerfile  GUIDE.md  README.md  REFERENCE.md  compose.yaml  config.yaml
modules/grav-ui/: README.md  package.json
modules/grav-ui-ash/: README.md
modules/grav-voice-vibevoice/: IMRAN_AUTOMATION_PLAYBOOK.md
services/grav-core/: README.md  package.json  tsconfig.json
(+139 files in other folders)
